alignment fixed

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -484,7 +484,7 @@ input,.right_wrap1 .tab-content .adm_inputs_wrap input,
 .adm_inputs_wrap {
   display: inline-block;
   width: 100%;
-  margin: 10px 0;
+  /*margin: 10px 0;*/
 }
 
 .adm_inputs_wrap .dropdown {
@@ -572,10 +572,10 @@ footer p {
 
 input.error,select.error,textarea.error{
 
-border:2px solid red !important;
+border:2px solid #7f1010 !important;
 }
 .validationError p {
-  color:red;
+  color:#7f1010;
   font-family: Arial, Helvetica, sans-serif;
 }
 .modal-dialog .modal-content{
